# rust-dashboard

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DATA_MANAGEMENT.md  Dockerfile  GAP_ANALYSIS.md  STATUS.md  build_release.bat  render.yaml
.cargo/: config.toml
.serena/: project.yml
_archive/: README.md
data/: CLAUDE.md
docs/: COMPETITIVE_API_SPEC.json  JOB_TYPE_EXPANSION_GUIDE.md  WORKAROUND_WORKSTYLE_MOBILITY.md
python_scripts/: job_medley_analyzer.py  segment_classifier.py
scripts/: create_postings_only_db.py  upload_layers_to_turso.py
src/: config.rs  lib.rs  main.rs
src/auth/: mod.rs  session.rs
src/db/: analytics.rs  cache.rs  local_sqlite.rs  mod.rs  turso.rs
src/geo/: choropleth.rs  mod.rs
src/handlers/: analysis.rs  api.rs  balance.rs  compare.rs  competitive.rs  demographics.rs  external.rs  job_creator.rs  jobmap.rs  mobility.rs  mod.rs  overview.rs  segment.rs  segment.rs.bak  talentmap.rs  workstyle.rs
src/models/: job_posting.rs  job_seeker.rs  mod.rs  statistics.rs
static/css/: dashboard.css
static/geojson/: 08_ibaraki.json  09_tochigi.json  10_gunma.json  11_saitama.json  16_toyama.json  19_yamanashi.json  21_gifu.json  25_shiga.json  27_osaka.json  29_nara.json  31_tottori.json  41_saga.json
static/js/: app.js  charts.js  export.js  maps.js  postingmap.js  tabcache.js
templates/: base.html  dashboard.html  dashboard_inline.html  login.html  login_inline.html
templates/tabs/: balance.html  competitive.html  demographics.html  jobmap.html  mobility.html  overview.html  (+2 more)
tests/: integration.rs
(+14 files in other folders)
