[package]
name = "rust_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip"] }
tower-sessions = "0.14"

# Template engine
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP client (Turso API)
reqwest = { version = "0.12", features = ["json"] }

# Cache
dashmap = "6"

# Authentication
bcrypt = "0.16"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression (gzip DB decompression on startup)
flate2 = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"

[profile.release]
opt-level = 2
lto = false
